<resources>
    <string name="app_name">Anime Quiz</string>
    <string name="main_text">Anime Quiz</string>
    <string name="version">Version:</string>
    <string name="logo">Logo</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="share">Share</string>
    <string name="back">Back</string>
    <string name="unlock">Unlock</string>
    <string name="lang">Language</string>
    <string name="rus">Russian</string>
    <string name="eng">English</string>
    <string name="jap">Japanese</string>
    <string name="sounds">Sounds</string>
    <string name="music">Music</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="saved">Saved</string>
    <string name="clearSave">Reset progress</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="confirmQuestion">Are you sure?</string>
    <string name="unlockText">Unlock all levels, including the levels of future updates</string>
    <string name="buy">Buy</string>
    <string name="share1">Thanks for installing this game and for your support!</string>
    <string name="share2">Tell your friends and subscribe, stay tuned for updates and news!</string>
    <string name="share3">There you will find the current promotional codes that can be activated in the game.</string>
    <string name="share4">Also send suggestions for improving the game and bugs that you found, in the future they will be fixed!</string>
    <string name="shineSite">Go to the official site of the game</string>
    <string name="vk">Go to VK</string>
    <string name="twitter">Go to Twitter</string>
    <string name="shop">Shop</string>
    <string name="soon">Soon</string>
    <string name="levelPrevious">Unlock the previous level</string>
    <string name="get">Get</string>
    <string name="scoreLeftAnswer">Out of points?</string>
    <string name="earnScoresByWatch">Get points for watching short ads!</string>
    <string name="characters">Characters</string>
    <string name="locations">Locations</string>
    <string name="titles">Titles</string>
    <string name="unlocked">Unlocked: </string>
    <string name="unlockLevel">Unlock the level for</string>
    <string name="items">Items</string>
    <string name="events">Events</string>
    <string name="chAnswer">What is the character\'s name?</string>
    <string name="locAnswer">What is the name of the location?</string>
    <string name="tiAnswer">Which anime?</string>
    <string name="itAnswer">What is this item?</string>
    <string name="warningDifficult">This category is of increased difficulty, you have no margin for error</string>
    <string name="heart">Hearts</string>
    <string name="use">Use</string>
    <string name="typePromo">Enter promo code</string>
    <string name="help">Help</string>
    <string name="costHelp">Cost: 5 points</string>
    <string name="scoreLeft">Points left:</string>
    <string name="takeHelp">Get help</string>
    <string name="takeHeath">Replenish health</string>
    <string name="takeScore">Add point</string>
    <string name="notEnough">Not enough</string>
    <string name="availableLevels">Available levels</string>
    <string name="win">Level passed!</string>
    <string name="loss">Try again</string>
    <string name="correct">Correct!</string>
    <string name="wrong">Wrong</string>
    <string name="again">Again</string>
    <string name="seconds"> sec.</string>
    <string name="timesUp">Time\'s up!</string>
    <string name="earned">Earned: </string>
    <string name="scores"> points.</string>
    <string name="level1">Level 1</string>
    <string name="level2">Level 2</string>
    <string name="level3">Level 3</string>
    <string name="level4">Level 4</string>
    <string name="level5">Level 5</string>
    <string name="akiko">akiko</string>
    <string name="beatrice">beatrice</string>
    <string name="bruno">bruno</string>
    <string name="nextUpdate">Look forward to the next update!</string>
</resources>