<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".Settings">

    <LinearLayout
        android:id="@+id/settingsMainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/topMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="0"
            android:gravity="start"
            android:orientation="horizontal"
            tools:ignore="ExtraText">

            <ImageView
                android:id="@+id/settingsBackView"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="start|bottom"
                android:layout_margin="3dp"
                android:contentDescription="@string/back"
                android:src="@drawable/back" />

            <TextView
                android:id="@+id/settingsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0"
                android:fontFamily="@font/pixel"
                android:gravity="center"
                android:text="@string/settings"
                android:textSize="28sp" />
            />
        </LinearLayout>

        <TextView
            android:id="@+id/langView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pixel"
            android:gravity="start"
            android:text="@string/lang"
            android:textSize="28sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/langGroup">

            <RadioButton
                android:id="@+id/langRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/rus"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/langRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/eng"
                android:textSize="26sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/soundsView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pixel"
            android:gravity="start"
            android:text="@string/sounds"
            android:textSize="28sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/soundsGroup">

            <RadioButton
                android:id="@+id/soundsRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/on"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/soundsRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/off"
                android:textSize="26sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/musicView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/pixel"
            android:gravity="start"
            android:text="@string/music"
            android:textSize="28sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/musicGroup">

            <RadioButton
                android:id="@+id/musicRadio1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/on"
                android:textSize="26sp" />

            <RadioButton
                android:id="@+id/musicRadio2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:fontFamily="@font/pixel"
                android:text="@string/off"
                android:textSize="26sp" />
        </RadioGroup>

        <TextView
            android:id="@+id/settingsStatusView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            android:fontFamily="@font/pixel"
            android:gravity="start"
            android:text="@string/saved"
            android:textSize="28sp"
            android:visibility="invisible" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>