<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".Share">

    <TextView
        android:id="@+id/shareView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/pixel"
        android:text="@string/share1"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/shareView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/pixel"
        android:text="@string/share2"
        android:textSize="26sp" />

    <TextView
        android:id="@+id/shareView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/pixel"
        android:text="@string/share3"
        android:textSize="26sp" />

    <LinearLayout
        android:id="@+id/vkViewClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="top"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/vkView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/vklogo" />

        <TextView
            android:id="@+id/shareView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0"
            android:fontFamily="@font/pixel"
            android:text="@string/vk"
            android:textSize="26sp"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="top"
        android:layout_gravity="center"
        android:id="@+id/twitterViewClick">

        <ImageView
            android:id="@+id/twitterView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/twitterlogo" />

        <TextView
            android:id="@+id/twitterView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="3dp"
            android:layout_weight="0"
            android:fontFamily="@font/pixel"
            android:text="@string/twitter"
            android:textSize="26sp"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/backViewShare"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|bottom"
            android:layout_margin="20dp"
            android:layout_weight="0"
            android:contentDescription="@string/back"
            android:src="@drawable/back" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            ads:adSize="BANNER"
            ads:adUnitId="ca-app-pub-7217958397153183/7940526044"
            android:layout_marginBottom="1dp"/>
    </LinearLayout>

</LinearLayout>