<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondText">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/win"
            android:textSize="28sp"
            android:textColor="@color/text"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:fontFamily="@font/pixel"/>
        <TextView
            android:id="@+id/earned"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/earned"
            android:textSize="24sp"
            android:textColor="@color/text"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/pixel" />

        <Button
            android:id="@+id/ok"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:background="@color/text"
            android:textColor="@color/secondText"
            android:gravity="center"
            android:layout_gravity="center"
            android:fontFamily="@font/pixel"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>