<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".levels.Characters"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/mainCharactersLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/topMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="0"
                android:contentDescription="@string/back"
                android:src="@drawable/backpixel"/>

            <TextView
                android:id="@+id/mainTextView"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/pixel"
                android:gravity="center"
                android:text="@string/characters"
                android:textSize="28sp" />

            <ImageView
                android:id="@+id/helpView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="start|center"
                android:layout_margin="3dp"
                android:layout_weight="0"
                android:contentDescription="@string/back"
                android:src="@drawable/help"/>

        </LinearLayout>

        <View
            android:id="@+id/backwall"
            android:layout_width="wrap_content"
            android:layout_height="261dp"
            android:background="@color/text" />

        <LinearLayout
            android:id="@+id/hearts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/heart1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/heart"
                app:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/heart2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/heart"
                app:srcCompat="@drawable/heart" />

            <ImageView
                android:id="@+id/heart3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:layout_weight="0"
                android:contentDescription="@string/heart"
                app:srcCompat="@drawable/heart" />
        </LinearLayout>
        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <TextView
            android:id="@+id/answerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0"
            android:fontFamily="@font/pixel"
            android:gravity="center"
            android:text="@string/chAnswer"
            android:textSize="28sp" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="20dp"
            android:layout_gravity="center"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCh1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="40dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_1"
                    android:gravity="center"
                    android:text=""
                    android:textColor="@color/background"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnCh2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/background"
                    android:background="@drawable/btn_1"
                    android:gravity="center" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/btnCh3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/background"
                    android:background="@drawable/btn_1"
                    android:gravity="center" />

                <Button
                    android:id="@+id/btnCh4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text=""
                    android:textSize="20sp"
                    android:textColor="@color/background"
                    android:background="@drawable/btn_1"
                    android:gravity="center" />
            </TableRow>

        </TableLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>